[package]
name = "post-custom-games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
reqwest = "0.11.13"
serde = "1.0.149"
serde_json = "1.0.89"
shaco = { version = "0.5.1", git = "https://github.com/nicolb2305/Shaco" }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
